--- a/include/parte01.tex
+++ b/include/parte01.tex
@@ -60,8 +60,8 @@
                 \rowcolor{black!10} Segunda & Terça & Quarta & Quinta & Sexta \\ \hline
                 \rowcolor{red!25} &&&& \\ \hline
                 \rowcolor{red!25} Métodos Num... & Trigonometria & Métodos Num... & Trigonometria & \\ \hline
-                \rowcolor{green!25} & Óptica e Eletro... & Termodinâmica & Óptica e Eletro... & Termodinâmica \\ \hline
-                \rowcolor{green!25} &&&& \\ \hline
+                \rowcolor{green!25} & & Termodinâmica & & Termodinâmica \\ \hline
+                \rowcolor{green!25} & Óptica e Eletro... & & Óptica e Eletro... & \\ \hline
                 \rowcolor{blue!25} &&&& \\ \hline
                 \rowcolor{blue!25} &&&& \\ \hline
             \end{tabular}
@@ -76,6 +76,7 @@
         \end{itemize}
     }
 \end{frame}
+
 
 \begin{frame}{Ementa de \Disciplina}
     \begin{itemize}
