--- a/trig.tex
+++ b/trig.tex
@@ -67,6 +67,7 @@ table% xcolor option
 
 \begin{document}
 
-\include{include/parte01}
+% \include{include/parte01}
+\include{include/e17.tex}
 
 \end{document}
