--- a/trig.tex
+++ b/trig.tex
@@ -29,6 +29,8 @@ table% xcolor option
 
 \usetikzlibrary{calc}
 \usetikzlibrary{intersections}
+\usetikzlibrary{fpu,fixedpointarithmetic}
+\usepackage{fp}
 
 \setkeys{Gin}{keepaspectratio}
 \sisetup{locale = FR}
