--- a/trig.tex
+++ b/trig.tex
@@ -69,7 +69,6 @@ table% xcolor option
 
 \begin{document}
 
-% \include{include/parte01}
-\include{include/e17.tex}
+\include{include/parte01}
 
 \end{document}
